Update unit tests
Signed-off-by: Michal Jarski <michal@jarski.eu>